--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,42 @@ a {
 * {
   box-sizing: border-box;
 }
+.text-sans{
+  font-family: sans-serif;
+}
+.text-orange{
+  color: orange;
+}
+.btn-orange{
+  background-color: orange;
+  color: white;
+}
+.btn-outline-orange{
+  border: orange 1px solid;
+  color: orange;
+}
+.bg-orange{
+  border: 1px solid orange !important;
+  opacity: 1;
+}
+.h-mdpx{
+  height: 500px;
+}
+.icon{
+  height: 20px;
+  width: 20px;
+}
+.text-lgrey{
+  color: rgb(181, 181, 181);
+}
+.btn:focus,.form-control:focus,.form-select:focus{
+  box-shadow: none;
+  border: 1px solid orange;
+}
+.Top:hover h3{
+  color: orange;
+  transition: .3s;
+}
+.Top h3{
+  transition: .3s;
+}
