--- a/example-1/styles/category.module.css
+++ b/example-1/styles/category.module.css
@@ -12,7 +12,7 @@
     content: '';
     position: absolute;
     inset: 0;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 .htMd {
@@ -21,4 +21,26 @@
 
 .borderNone {
     border: none;
+}
+.bglBlue{
+    background-color: #f4f9ff;
+}
+.cateHover:hover{
+    border-radius: 10px;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+    transition: .3s;
+}
+.cateHover{
+    transition: .3s;
+}
+.textIcon{
+    color: #27a99e;
+}
+.manage{
+    height: 450px;
+    width: 85vw;
+    top: 200px;
+    left: 0px;
+    right: 0px;
+    z-index: -1;
 }
