--- a/example-1/styles/globals.css
+++ b/example-1/styles/globals.css
@@ -50,6 +50,10 @@ a {
 .text-lgrey{
   color: rgb(181, 181, 181);
 }
+.text-white{
+  color: white !important;
+  z-index: 100000;
+}
 .text-lgreen{
   color: #37E2D5;
 }
@@ -85,4 +89,11 @@ a {
 }
 .mt-10{
   margin-top: 150px;
+}
+.overlay::before{
+  content: '';
+  position: absolute;
+  inset: 0;
+  border-radius: 17px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
